chore: react-native 0.76 (#656)
## 📜 Description

Update `react-native` to `0.76.2`.

## 💡 Motivation and Context

To stay up-do-date with ecosystem.

Key points:
- enabled Hermes on Android (JSC was crashing app on startup);
- enable `contextMenuHidden` only on iOS (see
https://github.com/facebook/react-native/pull/45014 - now if we select
entire text the cursor gets moved to the end and we don't handle the
event when cursor is located in the end).

## 📢 Changelog

<!-- High level overview of important changes -->
<!-- For example: fixed status bar manipulation; added new types
declarations; -->
<!-- If your changes don't affect one of platform/language below - then
remove this platform/language -->

### JS

- update all deps to its latest versions;

### Android

- enabled Hermes, since we get a crash on startup.

## 🤔 How Has This Been Tested?

tested on:
- CI;
- Pixel 7 Pro (Android 15);
- iPhone 6s (iOS 15.8);

## 📝 Checklist

- [x] CI successfully passed
- [x] I added new mocks and corresponding unit-tests if library API was
changed

--- a/package.json
+++ b/package.json
@@ -79,7 +79,8 @@
   },
   "devDependencies": {
     "@commitlint/config-conventional": "^11.0.0",
-    "@react-native/eslint-config": "^0.75.3",
+    "@react-native/babel-preset": "0.76.2",
+    "@react-native/eslint-config": "0.76.2",
     "@release-it/conventional-changelog": "^2.0.0",
     "@testing-library/react-hooks": "^8.0.1",
     "@types/jest": "^29.2.1",
@@ -92,6 +93,7 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-eslint-comments": "^3.2.0",
+    "eslint-plugin-ft-flow": "^3.0.11",
     "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-jest": "^26.5.3",
     "eslint-plugin-prettier": "^4.2.1",
@@ -102,12 +104,12 @@
     "pod-install": "^0.1.0",
     "prettier": "^2.8.8",
     "react": "18.3.1",
-    "react-native": "0.75.3",
+    "react-native": "0.76.2",
     "react-native-builder-bob": "^0.18.0",
     "react-native-reanimated": "3.16.1",
     "react-test-renderer": "18.2.0",
     "release-it": "^14.2.2",
-    "typescript": "5.0.4"
+    "typescript": "5.6.3"
   },
   "peerDependencies": {
     "react": "*",
