--- a/android/build.gradle
+++ b/android/build.gradle
@@ -158,14 +158,15 @@ repositories {
 }
 
 def kotlin_version = getExtOrDefault('kotlinVersion')
+def reactNativeVersion = getExtOrDefault('reactNativeVersion')
 
 dependencies {
   if (project.ext.shouldConsumeReactNativeFromMavenCentral()) {
     // noinspection GradleDynamicVersion
-    implementation 'com.facebook.react:react-android:+'
+    implementation "com.facebook.react:react-android:$reactNativeVersion"
   } else {
     // noinspection GradleDynamicVersion
-    implementation 'com.facebook.react:react-native:+'
+    implementation "com.facebook.react:react-native:$reactNativeVersion"
   }
   implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
   implementation 'androidx.core:core-ktx:1.5.0-beta03'
