--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -2,5 +2,6 @@ KeyboardController_kotlinVersion=1.8.22
 KeyboardController_compileSdkVersion=33
 KeyboardController_targetSdkVersion=33
 KeyboardController_minSdkVersion=16
+KeyboardController_reactNativeVersion=+
 
 android.useAndroidX=true
