--- a/.github/workflows/verify-android.yml
+++ b/.github/workflows/verify-android.yml
@@ -96,4 +96,4 @@ jobs:
       - name: Install dependencies
         run: yarn install --frozen-lockfile --cwd ..
       - name: Run Unit Tests
-        run: ./gradlew testDebugUnitTest
+        run: ./gradlew testDebugUnitTest -PreactNativeVersion=${{ env.REACT_NATIVE_VERSION }}
