fix: exclude android unit tests from being published to npm

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jest",
     "!lib/typescript/example",
     "!android/build",
+    "!android/src/test",
     "!android/.gradle",
     "!android/gradle",
     "!android/gradlew",
