chore: react-native 0.77

--- a/FabricExample/package.json
+++ b/FabricExample/package.json
@@ -12,20 +12,20 @@
   "dependencies": {
     "@gorhom/bottom-sheet": "4.6.4",
     "@react-native-community/blur": "^4.4.1",
-    "@react-native-masked-view/masked-view": "^0.3.1",
+    "@react-native-masked-view/masked-view": "^0.3.2",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "@react-navigation/stack": "^6.4.1",
-    "lottie-react-native": "^7.0.0",
+    "lottie-react-native": "^7.2.2",
     "react": "18.3.1",
-    "react-native": "0.76.2",
-    "react-native-gesture-handler": "2.20.2",
+    "react-native": "0.77.0",
+    "react-native-gesture-handler": "2.23.0",
     "react-native-haptic-feedback": "2.3.3",
     "react-native-keyboard-controller": "link:../",
-    "react-native-reanimated": "3.16.1",
+    "react-native-reanimated": "3.16.7",
     "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "4.0.0-beta.14",
+    "react-native-screens": "4.6.0",
     "react-native-toast-message": "^2.2.1"
   },
   "devDependencies": {
@@ -35,14 +35,14 @@
     "@react-native-community/cli": "15.0.1",
     "@react-native-community/cli-platform-android": "15.0.1",
     "@react-native-community/cli-platform-ios": "15.0.1",
-    "@react-native/babel-preset": "0.76.2",
-    "@react-native/metro-config": "0.76.2",
-    "@react-native/typescript-config": "0.76.2",
+    "@react-native/babel-preset": "0.77.0",
+    "@react-native/metro-config": "0.77.0",
+    "@react-native/typescript-config": "0.77.0",
     "@testing-library/jest-native": "^5.3.3",
     "@testing-library/react-hooks": "8.0.1",
     "@testing-library/react-native": "^11.5.0",
+    "@types/jest": "^29.5.13",
     "@types/react": "^18.2.6",
-    "babel-jest": "^29.6.3",
     "jest": "^29.6.3",
     "patch-package": "^6.4.7",
     "react-test-renderer": "18.3.1"
