--- a/package.json
+++ b/package.json
@@ -170,6 +170,13 @@
     "jsSrcsDir": "./src/specs",
     "android": {
       "javaPackageName": "com.reactnativekeyboardcontroller"
+    },
+    "ios": {
+      "componentProvider": {
+        "KeyboardControllerView": "KeyboardControllerView",
+        "KeyboardGestureArea": "KeyboardGestureArea",
+        "OverKeyboardView": "OverKeyboardView"
+      }
     }
   }
 }
