--- a/FabricExample/package.json
+++ b/FabricExample/package.json
@@ -19,8 +19,8 @@
     "@react-navigation/native-stack": "^6.11.0",
     "@react-navigation/stack": "^6.4.1",
     "lottie-react-native": "^7.2.2",
-    "react": "18.3.1",
-    "react-native": "0.77.0",
+    "react": "19.0.0",
+    "react-native": "0.78.0-rc.5",
     "react-native-gesture-handler": "2.23.0",
     "react-native-haptic-feedback": "2.3.3",
     "react-native-keyboard-controller": "link:../",
@@ -36,17 +36,18 @@
     "@react-native-community/cli": "15.0.1",
     "@react-native-community/cli-platform-android": "15.0.1",
     "@react-native-community/cli-platform-ios": "15.0.1",
-    "@react-native/babel-preset": "0.77.0",
-    "@react-native/metro-config": "0.77.0",
-    "@react-native/typescript-config": "0.77.0",
+    "@react-native/babel-preset": "0.78.0-rc.5",
+    "@react-native/metro-config": "0.78.0-rc.5",
+    "@react-native/typescript-config": "0.78.0-rc.5",
     "@testing-library/jest-native": "^5.3.3",
     "@testing-library/react-hooks": "8.0.1",
     "@testing-library/react-native": "^11.5.0",
     "@types/jest": "^29.5.13",
-    "@types/react": "^18.2.6",
+    "@types/react": "^19.0.0",
+    "@types/react-test-renderer": "^19.0.0",
     "jest": "^29.6.3",
     "patch-package": "^6.4.7",
-    "react-test-renderer": "18.3.1"
+    "react-test-renderer": "19.0.0"
   },
   "jest": {
     "preset": "react-native",
