--- a/package.json
+++ b/package.json
@@ -80,12 +80,13 @@
   },
   "devDependencies": {
     "@commitlint/config-conventional": "^11.0.0",
-    "@react-native/babel-preset": "0.77.0",
-    "@react-native/eslint-config": "0.77.0",
+    "@react-native/babel-preset": "0.78.0-rc.5",
+    "@react-native/eslint-config": "0.78.0-rc.5",
     "@release-it/conventional-changelog": "^2.0.0",
     "@testing-library/react-hooks": "^8.0.1",
     "@types/jest": "^29.5.13",
-    "@types/react": "^18.2.6",
+    "@types/react": "^19.0.0",
+    "@types/react-test-renderer": "^19.0.0",
     "@typescript-eslint/eslint-plugin": "^6.7.4",
     "@typescript-eslint/parser": "^6.7.4",
     "clang-format": "^1.8.0",
@@ -104,11 +105,11 @@
     "jest": "^29.6.3",
     "pod-install": "^0.1.0",
     "prettier": "^2.8.8",
-    "react": "18.3.1",
-    "react-native": "0.77.0",
+    "react": "19.0.0",
+    "react-native": "0.78.0-rc.5",
     "react-native-builder-bob": "^0.18.0",
     "react-native-reanimated": "3.16.7",
-    "react-test-renderer": "18.2.0",
+    "react-test-renderer": "19.0.0",
     "release-it": "^14.2.2",
     "typescript": "5.6.3"
   },
