ci: build app if patches were changed

--- a/.github/workflows/build-android-fabric.yml
+++ b/.github/workflows/build-android-fabric.yml
@@ -10,6 +10,7 @@ on:
       - "FabricExample/android/**"
       - "yarn.lock"
       - "FabricExample/yarn.lock"
+      - "FabricExample/patches/**"
       - "src/specs/**"
   pull_request:
     paths:
@@ -18,6 +19,7 @@ on:
       - "FabricExample/android/**"
       - "yarn.lock"
       - "FabricExample/yarn.lock"
+      - "FabricExample/patches/**"
       - "src/specs/**"
 
 jobs:
