--- a/.github/workflows/build-ios.yml
+++ b/.github/workflows/build-ios.yml
@@ -11,6 +11,7 @@ on:
       - "example/ios/**"
       - "yarn.lock"
       - "example/yarn.lock"
+      - "example/patches/**"
   pull_request:
     branches:
       - main
@@ -21,6 +22,7 @@ on:
       - "example/ios/**"
       - "yarn.lock"
       - "example/yarn.lock"
+      - "example/patches/**"
 
 jobs:
   build:
