--- a/example/package.json
+++ b/example/package.json
@@ -21,13 +21,13 @@
     "@react-navigation/stack": "^6.4.1",
     "lottie-react-native": "^7.2.2",
     "react": "19.0.0",
-    "react-native": "0.78.0-rc.5",
-    "react-native-gesture-handler": "2.23.0",
+    "react-native": "0.78.0",
+    "react-native-gesture-handler": "2.24.0",
     "react-native-haptic-feedback": "2.3.3",
     "react-native-keyboard-controller": "link:../",
     "react-native-reanimated": "3.16.7",
     "react-native-safe-area-context": "5.2.0",
-    "react-native-screens": "4.6.0",
+    "react-native-screens": "4.9.0",
     "react-native-text-input-mask": "3.1.5",
     "react-native-toast-message": "^2.2.1"
   },
