fix: update all deps, fix unit tests

--- a/example/package.json
+++ b/example/package.json
@@ -38,12 +38,12 @@
     "@react-native-community/cli": "15.0.1",
     "@react-native-community/cli-platform-android": "15.0.1",
     "@react-native-community/cli-platform-ios": "15.0.1",
-    "@react-native/babel-preset": "0.78.0-rc.5",
-    "@react-native/metro-config": "0.78.0-rc.5",
-    "@react-native/typescript-config": "0.78.0-rc.5",
+    "@react-native/babel-preset": "0.78.0",
+    "@react-native/metro-config": "0.78.0",
+    "@react-native/typescript-config": "0.78.0",
     "@testing-library/jest-native": "^5.3.2",
     "@testing-library/react-hooks": "8.0.1",
-    "@testing-library/react-native": "^11.5.0",
+    "@testing-library/react-native": "^13.0.1",
     "@types/jest": "^29.5.13",
     "@types/react": "^19.0.0",
     "@types/react-test-renderer": "^19.0.0",
