--- a/package.json
+++ b/package.json
@@ -80,8 +80,8 @@
   },
   "devDependencies": {
     "@commitlint/config-conventional": "^11.0.0",
-    "@react-native/babel-preset": "0.78.0-rc.5",
-    "@react-native/eslint-config": "0.78.0-rc.5",
+    "@react-native/babel-preset": "0.78.0",
+    "@react-native/eslint-config": "0.78.0",
     "@release-it/conventional-changelog": "^2.0.0",
     "@testing-library/react-hooks": "^8.0.1",
     "@types/jest": "^29.5.13",
