--- a/FabricExample/package.json
+++ b/FabricExample/package.json
@@ -14,6 +14,7 @@
     "@react-native-community/blur": "^4.4.1",
     "@react-native-masked-view/masked-view": "^0.3.2",
     "@react-navigation/bottom-tabs": "^6.6.1",
+    "@react-navigation/elements": "^2.2.5",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "@react-navigation/stack": "^6.4.1",
