--- a/package.json
+++ b/package.json
@@ -99,7 +99,7 @@
     "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-jest": "^26.5.3",
     "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react-compiler": "^0.0.0-experimental-0998c1e-20240625",
+    "eslint-plugin-react-compiler": "0.0.0-experimental-9ed098e-20240725",
     "eslint-plugin-react-perf": "^3.3.2",
     "husky": "^6.0.0",
     "jest": "^29.6.3",
