feat: `OverKeyboardView` custom `ShadowNode`

--- a/.github/workflows/verify-cpp.yml
+++ b/.github/workflows/verify-cpp.yml
@@ -7,10 +7,12 @@ on:
     paths:
       - ".github/workflows/verify-cpp.yml"
       - "android/src/main/**"
+      - "common/cpp/**"
   pull_request:
     paths:
       - ".github/workflows/verify-cpp.yml"
       - "android/src/main/**"
+      - "common/cpp/**"
 
 jobs:
   lint:
