--- a/.github/workflows/ios-e2e-test.yml
+++ b/.github/workflows/ios-e2e-test.yml
@@ -154,6 +154,12 @@ jobs:
         run: yarn install --cwd e2e
       - name: Use software keyboard
         run: defaults write com.apple.iphonesimulator ConnectHardwareKeyboard -bool NO
+      - name: Install and run yeetd
+        run: |
+          wget https://github.com/biscuitehh/yeetd/releases/download/1.0/yeetd-normal.pkg
+          sudo installer -pkg yeetd-normal.pkg -target /
+          defaults write dev.biscuit.yeetd killapsd ${{ inputs.kill-apsd }}
+          yeetd &
       - name: Test app
         working-directory: e2e
         run: SOFT_CHECK=false yarn test-example:ios-${{ matrix.devices.ios }}
