--- a/.github/workflows/verify-android.yml
+++ b/.github/workflows/verify-android.yml
@@ -79,7 +79,7 @@ jobs:
           curl -sSLO https://github.com/detekt/detekt/releases/download/v1.23.1/detekt-cli-1.23.1.zip
           unzip detekt-cli-1.23.1.zip
       - name: Run Detekt
-        run: ./detekt-cli-1.23.1/bin/detekt-cli
+        run: ./detekt-cli-1.23.1/bin/detekt-cli --config detekt.yml --build-upon-default-config
   unit-tests:
     name: 📖 Unit tests
     runs-on: ubuntu-latest
