--- a/.github/workflows/verify-cpp.yml
+++ b/.github/workflows/verify-cpp.yml
@@ -35,4 +35,4 @@ jobs:
           python -m pip install --upgrade pip
           pip install cpplint
       - name: Run cpplint
-        run: cpplint --linelength=230 --filter=-legal/copyright,-readability/todo,-build/namespaces,-whitespace/comments,-build/c++11,-runtime/int,-runtime/references --quiet --recursive android/src/main/ common/cpp/
+        run: cpplint --linelength=230 --filter=-legal/copyright,-readability/todo,-build/namespaces,-whitespace/comments,-build/c++11,-runtime/int,-runtime/references,-whitespace/indent_namespace --quiet --recursive android/src/main/ common/cpp/
