feat: `OverKeyboardView` with custom `ShadowNode` (#863)
## 📜 Description

Stretch `OverKeyboardView` to full screen height on fabric/android.

## 💡 Motivation and Context

To make `OverKeyboardView` to stretch to full screen we have to override
layout on ShadowNodes side. For paper architecture we already do that in
corresponding `ShadowNode` kotlin class. Since new architecture is C++
based - we have to make corresponding changes in C++ code.

Unfortunately there is no easy way to add custom properties/code in
existing/auto-generated shadow-nodes. To make it working we have to
genereate them ourself and change the code accordingly. In this PR I did
that. I copied autogenerated code, formatted it according to `cpplint`
rules and did a proper linking. After that I wrote additional code that
uses values passed from kotlin in c++ and properly resized the inner
view.

Last, but not least - on iOS we manually specify the size of inner
child, on Android - we are laid out by ShadowNodes. To keep the same
behavior on Android we need to stretch to full screen width `top: 0,
right: 0, bottom: 0, left: 0`, while on iOS we just have to specify
exact dimensions.

Also on Android/Fabric I discovered, that if view keeps mounted, then
the view intercepts touches (even if it's not laid out properly). To fix
that and match RN behavior I added `visible && children` condition - in
this case we don't mount children and thus they are not clickable 🙃

Closes
https://github.com/kirillzyusko/react-native-keyboard-controller/issues/862

## 📢 Changelog

<!-- High level overview of important changes -->
<!-- For example: fixed status bar manipulation; added new types
declarations; -->
<!-- If your changes don't affect one of platform/language below - then
remove this platform/language -->

### Example

- added black color for "KYC" button (toolbar);

### JS

- removed `architecture.ts` file;
- generate `interfaceOnly` from `codegen`;
- don't mount children until `visible=true` (to match Modal

--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "lib",
     "android",
     "ios",
+    "common",
     "cpp",
     "react-native-keyboard-controller.podspec",
+    "react-native.config.js",
     "jest",
     "!lib/typescript/example",
+    "!android/detekt.yml",
     "!android/build",
     "!android/src/test",
     "!android/.gradle",
