--- a/.github/workflows/ios-e2e-test.yml
+++ b/.github/workflows/ios-e2e-test.yml
@@ -120,6 +120,10 @@ jobs:
       - uses: maxim-lobanov/setup-xcode@v1
         with:
           xcode-version: ${{ matrix.devices.xcode }}
+      - name: Disable Spotlight Indexing
+        run: sudo mdutil -a -i off
+      - name: Increase File Limits
+        run: ulimit -n 65535
       - name: Get Xcode version
         run: xcodebuild -version
       # needed for additional runtime installation
