fix: check disk space

--- a/.github/workflows/ios-e2e-test.yml
+++ b/.github/workflows/ios-e2e-test.yml
@@ -124,6 +124,8 @@ jobs:
         run: sudo mdutil -a -i off
       - name: Increase File Limits
         run: ulimit -n 65535
+      - name: Check Disk Space
+        run: df -h
       - name: Get Xcode version
         run: xcodebuild -version
       # needed for additional runtime installation
