--- a/example/package.json
+++ b/example/package.json
@@ -24,7 +24,9 @@
     "react-native": "0.78.0",
     "react-native-gesture-handler": "2.24.0",
     "react-native-haptic-feedback": "2.3.3",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-keyboard-controller": "link:../",
+    "react-native-keyboard-manager": "^6.5.16-0",
     "react-native-reanimated": "3.17.0",
     "react-native-safe-area-context": "5.2.0",
     "react-native-screens": "4.9.0",
