--- a/example/package.json
+++ b/example/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "@react-navigation/stack": "^6.4.1",
+    "@shopify/react-native-skia": "^1.12.4",
     "lottie-react-native": "^7.2.2",
     "react": "19.0.0",
     "react-native": "0.78.0",
