feat: more demos

--- a/example/package.json
+++ b/example/package.json
@@ -19,9 +19,11 @@
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "@react-navigation/stack": "^6.4.1",
+    "@shopify/react-native-skia": "^2.0.0-next.3",
     "lottie-react-native": "^7.2.2",
     "react": "19.0.0",
     "react-native": "0.78.0",
+    "react-native-avoid-softinput": "^7.0.1",
     "react-native-gesture-handler": "2.24.0",
     "react-native-haptic-feedback": "2.3.3",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
