--- a/android/build.gradle
+++ b/android/build.gradle
@@ -177,6 +177,7 @@ dependencies {
   implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
   implementation 'androidx.core:core-ktx:1.5.0-beta03'
   implementation 'androidx.dynamicanimation:dynamicanimation-ktx:1.0.0-alpha03'
+  implementation 'androidx.compose.material3:material3-android:1.3.2'
 
   // dependencies for testing
   testImplementation 'junit:junit:4.13.2'
