--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "keyboard done button",
     "keyboard next button",
     "keyboard previous button",
+    "extend keyboard",
     "ios",
     "android"
   ],
