docs: add keyword

--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "avoid keyboard",
     "sticky view",
     "over keyboard view",
+    "keyboard background view",
     "keyboard aware scroll view",
     "keyboard toolbar",
     "keyboard done button",
