--- a/.github/workflows/verify-ios.yml
+++ b/.github/workflows/verify-ios.yml
@@ -75,5 +75,5 @@ jobs:
           test \
           -scheme KeyboardControllerNative \
           -only-testing KeyboardControllerNativeTests \
-          -destination 'platform=iOS Simulator,name=iPhone 16 Pro' \
+          -destination 'platform=iOS Simulator,name=iPhone 16 Pro,OS=18.4' \
           CODE_SIGNING_ALLOWED=NO | xcpretty"
