--- a/.github/workflows/verify-ios.yml
+++ b/.github/workflows/verify-ios.yml
@@ -65,7 +65,7 @@ jobs:
 
       - uses: maxim-lobanov/setup-xcode@v1
         with:
-          xcode-version: "15.4"
+          xcode-version: "16.2"
 
       - name: Install xcpretty
         run: gem install xcpretty
@@ -75,5 +75,5 @@ jobs:
           test \
           -scheme KeyboardControllerNative \
           -only-testing KeyboardControllerNativeTests \
-          -destination 'platform=iOS Simulator,name=iPhone 15 Pro' \
+          -destination 'platform=iOS Simulator,name=iPhone 16 Pro,OS=18.4' \
           CODE_SIGNING_ALLOWED=NO | xcpretty"
