docs: enable `llms.txt` for docs (#976)
## 📜 Description

Added generation of `llms.txt`.

## 💡 Motivation and Context

In reality people already use less and less classic search and more and
more trust to LLMs. However current LLMs struggle to index classic
websites and unofficial standard is usage of `llms.txt` - markdown files
that contains documentation.

To continuously generate llms files I decided to use a special plugin
that does. Maybe in future I'll switch to official docusaurus plugin,
but now let's not waste time and implement something to make docs LLMs
friendly.

## 📢 Changelog

<!-- High level overview of important changes -->
<!-- For example: fixed status bar manipulation; added new types
declarations; -->
<!-- If your changes don't affect one of platform/language below - then
remove this platform/language -->

### Docs

- continuously generate `llms.txt`;
- added patch-package;
- fixed broken anchors;

## 🤔 How Has This Been Tested?

Preview will not have LLMs integration (for now), so the only way to
test is to merge it and verify deploy.

## 📸 Screenshots (if appropriate):

<img width="266" alt="image"
src="https://github.com/user-attachments/assets/4e26ca9f-1882-4440-9158-8534a05f8b64"
/>

## 📝 Checklist

- [x] CI successfully passed
- [x] I added new mocks and corresponding unit-tests if library API was
changed

--- a/docs/package.json
+++ b/docs/package.json
@@ -13,12 +13,14 @@
     "https": "HTTPS=true SSL_CRT_FILE=localhost.pem SSL_KEY_FILE=localhost-key.pem docusaurus start",
     "write-translations": "docusaurus write-translations",
     "write-heading-ids": "docusaurus write-heading-ids",
-    "typescript": "tsc"
+    "typescript": "tsc",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "@docusaurus/core": "3.4.0",
     "@docusaurus/preset-classic": "3.4.0",
     "@mdx-js/react": "^3.0.0",
+    "@signalwire/docusaurus-plugin-llms-txt": "^1.0.1",
     "clsx": "^2.0.0",
     "lottie-react": "^2.4.0",
     "prism-react-renderer": "^2.3.0",
@@ -34,6 +36,7 @@
     "@playwright/test": "^1.46.0",
     "cheerio": "^1.0.0-rc.12",
     "markdownlint-cli2": "^0.12.1",
+    "patch-package": "^8.0.0",
     "typescript": "^5.2.2"
   },
   "browserslist": {
