chore: react-native 0.80

--- a/FabricExample/tsconfig.json
+++ b/FabricExample/tsconfig.json
@@ -1,6 +1,6 @@
 // prettier-ignore
 {
-  "extends": "@react-native/typescript-config/tsconfig.json",     /* Recommended React Native TSConfig base */
+  "extends": "@react-native/typescript-config",     /* Recommended React Native TSConfig base */
   "compilerOptions": {
     /* Visit https://aka.ms/tsconfig.json to read more about this file */
 
