--- a/docs/package.json
+++ b/docs/package.json
@@ -25,7 +25,8 @@
     "lottie-react": "^2.4.0",
     "prism-react-renderer": "^2.3.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "swiper": "^11.2.10"
   },
   "devDependencies": {
     "@argos-ci/cli": "^1.0.0",
