--- a/FabricExample/package.json
+++ b/FabricExample/package.json
@@ -24,10 +24,11 @@
     "react-native-gesture-handler": "2.24.0",
     "react-native-haptic-feedback": "2.3.3",
     "react-native-keyboard-controller": "link:../",
-    "react-native-reanimated": "3.17.0",
+    "react-native-reanimated": "4.1.0",
     "react-native-safe-area-context": "5.2.0",
     "react-native-screens": "4.9.0",
-    "react-native-toast-message": "^2.2.1"
+    "react-native-toast-message": "^2.2.1",
+    "react-native-worklets": "^0.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
