--- a/e2e/package.json
+++ b/e2e/package.json
@@ -35,7 +35,7 @@
     "@types/pngjs": "^6.0.1",
     "async-retry": "^1.3.3",
     "colors": "^1.4.0",
-    "detox": "20.31.0",
+    "detox": "20.43.0-alpha.0",
     "jest": "^29",
     "patch-package": "^8.0.0",
     "pixelmatch": "^5.3.0",
