--- a/FabricExample/package.json
+++ b/FabricExample/package.json
@@ -21,6 +21,7 @@
     "lottie-react-native": "^7.2.3",
     "react": "19.1.0",
     "react-native": "0.80.1",
+    "react-native-advanced-input-mask": "^1.4.5",
     "react-native-gesture-handler": "2.27.1",
     "react-native-haptic-feedback": "2.3.3",
     "react-native-keyboard-controller": "link:../",
