--- a/.github/workflows/verify-ios.yml
+++ b/.github/workflows/verify-ios.yml
@@ -70,6 +70,13 @@ jobs:
       - name: Install xcpretty
         run: gem install xcpretty
 
+      # https://bitrise.io/blog/post/xcode-15-performance-regressions
+      - name: Install yeetd
+        run: |
+          wget https://github.com/biscuitehh/yeetd/releases/download/1.0/yeetd-normal.pkg
+          sudo installer -pkg yeetd-normal.pkg -target /
+          yeetd &
+
       - name: Run unit tests
         run: "set -o pipefail && xcodebuild \
           test \
