--- a/android/build.gradle
+++ b/android/build.gradle
@@ -26,6 +26,10 @@ def isNewArchitectureEnabled() {
   return project.hasProperty("newArchEnabled") && project.newArchEnabled == "true"
 }
 
+def isEdgeToEdgeEnabled() {
+  return project.hasProperty("edgeToEdgeEnabled") && project.edgeToEdgeEnabled == "true"
+}
+
 def reactNativeArchitectures() {
   def value = project.getProperties().get("reactNativeArchitectures")
   return value ? value.split(",") : ["armeabi-v7a", "x86", "x86_64", "arm64-v8a"]
@@ -55,6 +59,7 @@ android {
     versionCode 1
     versionName "1.0"
     buildConfigField "boolean", "IS_NEW_ARCHITECTURE_ENABLED", isNewArchitectureEnabled().toString()
+    buildConfigField "boolean", "IS_EDGE_TO_EDGE_ENABLED", isEdgeToEdgeEnabled().toString()
     ndk {
       abiFilters (*reactNativeArchitectures())
     }
