fix: try to use yeetd in a hope that it will speed up tests execution

--- a/.github/workflows/ios-e2e-test.yml
+++ b/.github/workflows/ios-e2e-test.yml
@@ -155,6 +155,12 @@ jobs:
         run: yarn install --cwd e2e
       - name: Use software keyboard
         run: defaults write com.apple.iphonesimulator ConnectHardwareKeyboard -bool NO
+      # https://bitrise.io/blog/post/xcode-15-performance-regressions
+      - name: Install yeetd
+        run: |
+          wget https://github.com/biscuitehh/yeetd/releases/download/1.0/yeetd-normal.pkg
+          sudo installer -pkg yeetd-normal.pkg -target /
+          yeetd &
       - name: Test app
         working-directory: e2e
         run: SOFT_CHECK=false yarn test-example:ios-${{ matrix.devices.ios }}
