--- a/.github/workflows/ios-e2e-test.yml
+++ b/.github/workflows/ios-e2e-test.yml
@@ -109,6 +109,7 @@ jobs:
             { ios: 16, xcode: "16.4", macos: 15, runtime: "16.4" },
             { ios: 17, xcode: "16.4", macos: 15, runtime: "17.5" },
             { ios: 18, xcode: "16.4", macos: 15 },
+            { ios: 26, xcode: "16.4", macos: 26 },
           ]
     needs: build
     steps:
