--- a/.github/workflows/ios-e2e-test.yml
+++ b/.github/workflows/ios-e2e-test.yml
@@ -158,6 +158,7 @@ jobs:
       # https://bitrise.io/blog/post/xcode-15-performance-regressions
       - name: Install yeetd
         run: |
+          defaults write dev.biscuit.yeetd killapsd true
           wget https://github.com/biscuitehh/yeetd/releases/download/1.0/yeetd-normal.pkg
           sudo installer -pkg yeetd-normal.pkg -target /
           yeetd &
