ci: use macos-15 (#1188)
## 📜 Description

Use macos-15 as a main runner for ios-related jobs.

## 💡 Motivation and Context

I anticipate that macos-14 soon will be deprecated (I see that sometimes
it may take some time for a runner to pick up a job). So I decided to
pro-actively migrate all my jobs that depends on `macos-14` to
`macos-15`.

Additionally I've tried to enable `ios-18` tests again. It's almost a
year since a release, and now I think all dependencies (GH actions
runners, detox etc.) are stable enough to bring those tests back 😊

## 📢 Changelog

<!-- High level overview of important changes -->
<!-- For example: fixed status bar manipulation; added new types
declarations; -->
<!-- If your changes don't affect one of platform/language below - then
remove this platform/language -->

### CI

- use `macos-15` for all jobs;
- return back `ios-18` tests;
- use `yeetd` as it looks like it saves 2-3 additional minutes;

### E2E

- increase diff to `0.27` for `KeyboardAvoidingView` test (to improve
iOS 18 stability);

## 🤔 How Has This Been Tested?

Tested via CI.

## 📸 Screenshots (if appropriate):

<img width="932" height="273" alt="image"
src="https://github.com/user-attachments/assets/fb3ccfb4-c2e9-421f-a97b-7bf81612068c"
/>

## 📝 Checklist

- [x] CI successfully passed
- [x] I added new mocks and corresponding unit-tests if library API was
changed

--- a/.github/workflows/ios-e2e-test.yml
+++ b/.github/workflows/ios-e2e-test.yml
@@ -24,7 +24,7 @@ on:
 jobs:
   build:
     name: 🏗️ Build E2E ipa
-    runs-on: macos-14
+    runs-on: macos-15
     timeout-minutes: 60
     env:
       WORKING_DIRECTORY: example
@@ -39,7 +39,7 @@ jobs:
           cache: "yarn"
       - uses: maxim-lobanov/setup-xcode@v1
         with:
-          xcode-version: "16.2"
+          xcode-version: "16.4"
       - name: Get Xcode version
         run: xcodebuild -version
       - name: Save yarn cache directory path
@@ -103,11 +103,12 @@ jobs:
       cancel-in-progress: true
     strategy:
       matrix:
-        devices: [
-            { ios: 15, xcode: "15.4", macos: 14, runtime: "15.5" },
-            { ios: 16, xcode: "15.4", macos: 14, runtime: "16.4" },
-            { ios: 17, xcode: "15.4", macos: 14 },
-            # { ios: 18, xcode: "16.0", macos: 15 },
+        devices:
+          [
+            { ios: 15, xcode: "16.4", macos: 15, runtime: "15.5" },
+            { ios: 16, xcode: "16.4", macos: 15, runtime: "16.4" },
+            { ios: 17, xcode: "16.4", macos: 15, runtime: "17.5" },
+            { ios: 18, xcode: "16.4", macos: 15 },
           ]
     needs: build
     steps:
@@ -154,6 +155,13 @@ jobs:
         run: yarn install --cwd e2e
       - name: Use software keyboard
         run: defaults write com.apple.iphonesimulator ConnectHardwareKeyboard -bool NO
+      # https://bitrise.io/blog/post/xcode-15-performance-regressions
+      - name: Install yeetd
+        run: |
+          defaults write dev.biscuit.yeetd killapsd true
+          wget https://github.com/biscuitehh/yeetd/releases/download/1.0/yeetd-normal.pkg
+          sudo installer -pkg yeetd-normal.pkg -target /
+          yeetd &
       - name: Test app
         working-directory: e2e
         run: SOFT_CHECK=false yarn test-example:ios-${{ matrix.devices.ios }}
