--- a/.github/workflows/ios-e2e-test.yml
+++ b/.github/workflows/ios-e2e-test.yml
@@ -23,14 +23,17 @@ on:
 
 jobs:
   build:
-    name: 🏗️ Build E2E ipa
-    runs-on: macos-15
+    name: 🏗️ Build E2E ipa (Xcode ${{ matrix.config.xcode }})
+    runs-on: macos-${{ matrix.config.macos }}
     timeout-minutes: 60
     env:
       WORKING_DIRECTORY: example
     concurrency:
       group: ios-e2e-${{ github.ref }}
       cancel-in-progress: true
+    strategy:
+      matrix:
+        config: [{ xcode: "16.4", macos: 15 }, { xcode: "26.0", macos: 26 }]
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
@@ -39,7 +42,7 @@ jobs:
           cache: "yarn"
       - uses: maxim-lobanov/setup-xcode@v1
         with:
-          xcode-version: "16.4"
+          xcode-version: ${{ matrix.config.xcode }}
       - name: Get Xcode version
         run: xcodebuild -version
       - name: Save yarn cache directory path
@@ -90,7 +93,7 @@ jobs:
         run: yarn build-example:ios
       - uses: actions/upload-artifact@v4
         with:
-          name: ios-e2e-ipa
+          name: ios-e2e-ipa-xcode${{ matrix.config.xcode }}
           path: example/ios/build/Build/Products/Release-iphonesimulator/KeyboardControllerExample.app/**
   e2e-test:
     name: ⚙️ Automated test cases (iOS-${{ matrix.devices.ios }})
@@ -143,6 +146,13 @@ jobs:
               iphone: "iPhone 17 Pro",
               os: "26.0",
             },
+            {
+              ios: 26,
+              xcode: "26.1",
+              macos: 26,
+              iphone: "iPhone 17 Pro",
+              os: "26.1",
+            },
           ]
     needs: build
     steps:
@@ -150,7 +160,7 @@ jobs:
       - name: Download a single artifact
         uses: actions/download-artifact@v4
         with:
-          name: ios-e2e-ipa
+          name: ios-e2e-ipa-xcode${{ matrix.devices.xcode }}
           path: example/ios/build/Build/Products/Release-iphonesimulator/KeyboardControllerExample.app/
       - uses: maxim-lobanov/setup-xcode@v1
         with:
