--- a/.github/workflows/ios-e2e-test.yml
+++ b/.github/workflows/ios-e2e-test.yml
@@ -29,7 +29,7 @@ jobs:
     env:
       WORKING_DIRECTORY: example
     concurrency:
-      group: ios-e2e-${{ github.ref }}
+      group: ios-e2e-${{ matrix.config.xcode }}-${{ github.ref }}
       cancel-in-progress: true
     strategy:
       matrix:
