fix: iOS e2e tests

--- a/.github/workflows/ios-e2e-test.yml
+++ b/.github/workflows/ios-e2e-test.yml
@@ -126,7 +126,7 @@ jobs:
         run: xcodebuild -version
       # needed for additional runtime installation
       - name: Install Xcodes
-        run: brew tap robotsandpencils/made
+        run: brew tap xcodesorg/made
       - name: Install additional iOS runtimes
         if: ${{ matrix.devices.runtime != '' && matrix.devices.runtime != null }}
         uses: ./.github/actions/retry-sudo-with-timeout
