--- a/.github/workflows/ios-e2e-test.yml
+++ b/.github/workflows/ios-e2e-test.yml
@@ -105,11 +105,44 @@ jobs:
       matrix:
         devices:
           [
-            { ios: 15, xcode: "16.4", macos: 15, runtime: "15.5" },
-            { ios: 16, xcode: "16.4", macos: 15, runtime: "16.4" },
-            { ios: 17, xcode: "16.4", macos: 15, runtime: "17.5" },
-            { ios: 18, xcode: "16.4", macos: 15 },
-            { ios: 26, xcode: "16.4", macos: 26 },
+            {
+              ios: 15,
+              xcode: "16.4",
+              macos: 15,
+              runtime: "15.5",
+              iphone: "iPhone 13 Pro",
+              os: "15.5",
+            },
+            {
+              ios: 16,
+              xcode: "16.4",
+              macos: 15,
+              runtime: "16.4",
+              iphone: "iPhone 14 Pro",
+              os: "16.4",
+            },
+            {
+              ios: 17,
+              xcode: "16.4",
+              macos: 15,
+              runtime: "17.5",
+              iphone: "iPhone 15 Pro",
+              os: "17.5",
+            },
+            {
+              ios: 18,
+              xcode: "16.4",
+              macos: 15,
+              iphone: "iPhone 16 Pro",
+              os: "18.5",
+            },
+            {
+              ios: 26,
+              xcode: "16.4",
+              macos: 26,
+              iphone: "iPhone 17 Pro",
+              os: "26.0",
+            },
           ]
     needs: build
     steps:
@@ -137,8 +170,21 @@ jobs:
           retry_interval: 60
       - name: List all available simulators
         run: xcrun simctl list
-      - name: Update shared cache
-        run: xcrun simctl runtime dyld_shared_cache update --all
+      # https://bitrise.io/blog/post/xcode-15-performance-regressions
+      - name: Install yeetd
+        run: |
+          defaults write dev.biscuit.yeetd killapsd true
+          wget https://github.com/biscuitehh/yeetd/releases/download/1.0/yeetd-normal.pkg
+          sudo installer -pkg yeetd-normal.pkg -target /
+          yeetd &
+      # needed for simulator pre-booting
+      - name: Install CoreUtils
+        run: brew install coreutils
+      - name: Boot simulator
+        uses: ./.github/actions/boot-simulator
+        with:
+          simulator-name: ${{ matrix.devices.iphone }}
+          simulator-version: ${{ matrix.devices.os }}
       - name: Install AppleSimulatorUtils
         run: brew tap wix/brew && brew install applesimutils
       - name: Save yarn cache directory path
@@ -158,13 +204,6 @@ jobs:
         run: yarn install --cwd e2e
       - name: Use software keyboard
         run: defaults write com.apple.iphonesimulator ConnectHardwareKeyboard -bool NO
-      # https://bitrise.io/blog/post/xcode-15-performance-regressions
-      - name: Install yeetd
-        run: |
-          defaults write dev.biscuit.yeetd killapsd true
-          wget https://github.com/biscuitehh/yeetd/releases/download/1.0/yeetd-normal.pkg
-          sudo installer -pkg yeetd-normal.pkg -target /
-          yeetd &
       - name: Test app
         working-directory: e2e
         run: SOFT_CHECK=false yarn test-example:ios-${{ matrix.devices.ios }}
