e2e: add iOS 26 + XCode 26 tests (#1194)
## 📜 Description

Added e2e tests assembled with XCode 26 and tested on iOS 26.

## 💡 Motivation and Context

The problem with iOS 26 keyboard is that it has two states:
- if app is compiled with XCode 16.4 - it will use default (iOS 18)
keyboard even if device is running on iOS 26
- if app is compiled with XCode 26 and app is running on iOS 26 - it'll
use new keyboard

In this PR I'm covering new keyboard functionality. We want to make
keyboard controller stable across all OS versions and this step is
crucial in terms of guarantee that lib works in all conditions (i. e.
backward compatible mode and new mode).

This PR reveals some inconsistencies:
- `KeyboardBackgroundView` doesn't match real keyboard background color
anymore;
- in rotation example yellow circle goes behind header (though I think
it's safe area context problem)

I also intentionally test new keyboard on iOS 26.1, because iOS 26.0
wasn't really stable (it had animation jumps etc.)

I hope new tests will help me to catch bugs earlier rather than later,
tough I have feeling like I'm overusing GitHub CI (now I run 6 iOS e2e
jobs 🤯). I may revisit the approach later and maybe run only few jobs
for PRs and all test cases when merge into main 🤷‍♂️

## 📢 Changelog

<!-- High level overview of important changes -->
<!-- For example: fixed status bar manipulation; added new types
declarations; -->
<!-- If your changes don't affect one of platform/language below - then
remove this platform/language -->

### E2E

- adjusted `KeyboardExtender` threshold (after detach I can see rounded
corners of keyboard)
- generated assets for iPhone 16e
- added config for iPhone 16e tests (iOS 26.1)

### CI

- run 2 builds in parallel (XCode 16 + Xcode 26)
- use separate native cache (ccache, pods)
- add additional e2e tests that will cover only XCode 26 + iOS 26
configuration

## 🤔 How Has This Been Tested?

Tested via this PR.

## 📸 Screenshots (if appropriate):

<img width="851" hei

--- a/.github/workflows/ios-e2e-test.yml
+++ b/.github/workflows/ios-e2e-test.yml
@@ -21,16 +21,20 @@ on:
       - "e2e/**"
       - "src/**"
 
+concurrency:
+  group: ios-e2e-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   build:
-    name: 🏗️ Build E2E ipa
-    runs-on: macos-15
+    name: 🏗️ Build E2E ipa (Xcode ${{ matrix.config.xcode }})
+    runs-on: macos-${{ matrix.config.macos }}
     timeout-minutes: 60
     env:
       WORKING_DIRECTORY: example
-    concurrency:
-      group: ios-e2e-${{ github.ref }}
-      cancel-in-progress: true
+    strategy:
+      matrix:
+        config: [{ xcode: "16.4", macos: 15 }, { xcode: "26.1", macos: 26 }]
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
@@ -39,7 +43,7 @@ jobs:
           cache: "yarn"
       - uses: maxim-lobanov/setup-xcode@v1
         with:
-          xcode-version: "16.4"
+          xcode-version: ${{ matrix.config.xcode }}
       - name: Get Xcode version
         run: xcodebuild -version
       - name: Save yarn cache directory path
@@ -64,7 +68,7 @@ jobs:
         uses: hendrikmuhs/ccache-action@v1.2
         with:
           max-size: 1.5G
-          key: ${{ runner.os }}-ccache-e2e-ios
+          key: ${{ runner.os }}-xcode-${{ matrix.config.xcode }}-ccache-e2e-ios
           create-symlink: true
       - name: Setup ccache behavior
         run: |
@@ -79,9 +83,9 @@ jobs:
             example/ios/Pods
             ~/Library/Caches/CocoaPods
             ~/.cocoapods
-          key: ${{ runner.os }}-pods-${{ hashFiles('**/Podfile.lock') }}
+          key: ${{ runner.os }}-xcode-${{ matrix.config.xcode }}-pods-${{ hashFiles('**/Podfile.lock') }}
           restore-keys: |
-            ${{ runner.os }}-pods-
+            ${{ runner.os }}-xcode-${{ matrix.config.xcode }}-pods-
       - name: Install pods
         working-directory: ${{ env.WORKING_DIRECTORY }}/ios
         run: export USE_CCACHE=1 && pod install || pod update --repo-update
@@ -90,17 +94,14 @@ jobs:
         run: yarn build-example:ios
       - uses: actions/upload-artifact@v4
         with:
-          name: ios-e2e-ipa
+          name: ios-e2e-ipa-xcode${{ matrix.config.xcode }}
           path: example/ios/build/Build/Products/Release-iphonesimulator/KeyboardControllerExample.app/**
   e2e-test:
-    name: ⚙️ Automated test cases (iOS-${{ matrix.devices.ios }})
+    name: ⚙️ Automated test cases (iOS-${{ matrix.devices.ios }}, XCode-${{ matrix.devices.xcode }})
     runs-on: macos-${{ matrix.devices.macos }}
     timeout-minutes: 90
     env:
       WORKING_DIRECTORY: example
-    concurrency:
-      group: ios-e2e-${{ matrix.devices.ios }}-${{ github.ref }}
-      cancel-in-progress: true
     strategy:
       matrix:
         devices:
@@ -143,6 +144,13 @@ jobs:
               iphone: "iPhone 17 Pro",
               os: "26.0",
             },
+            {
+              ios: "26e",
+              xcode: "26.1",
+              macos: 26,
+              iphone: "iPhone 16e",
+              os: "26.1",
+            },
           ]
     needs: build
     steps:
@@ -150,7 +158,7 @@ jobs:
       - name: Download a single artifact
         uses: actions/download-artifact@v4
         with:
-          name: ios-e2e-ipa
+          name: ios-e2e-ipa-xcode${{ matrix.devices.xcode }}
           path: example/ios/build/Build/Products/Release-iphonesimulator/KeyboardControllerExample.app/
       - uses: maxim-lobanov/setup-xcode@v1
         with:
